--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: Analytics + NV
 # List of links in the navigation bar
 navbar-links:
   ABOUT ME: "aboutme"
-  PROJECTS:
-  RESUME: "mariaguidengresume.pdf"
+  PROJECTS: "
+  RESUME: "_resume/mariaguidengresume.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
