--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: Analytics + NV
 # List of links in the navigation bar
 navbar-links:
   ABOUT ME: "aboutme"
-  PROJECTS: "
+  PROJECTS: "projects"
   RESUME: "_resume/mariaguidengresume.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
