--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty:  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty:
 
 # --- Web Statistics Section --- #
 
