--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,9 @@ social-network-links:
   facebook: daattali
   github: mariaguideg
   twitter: daattali
+  linkedin: guideng
 #  reddit: yourname
 #  google-plus: +DeanAttali
-#  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -88,7 +88,7 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
-  rss: true
+  rss: false
   twitter: false
   facebook: false
   google: false
