--- a/_config.yml
+++ b/_config.yml
@@ -69,10 +69,10 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   email: "nerdyrie@gmail.com"
-  facebook: daattali
   github: mariaguideg
-  twitter: daattali
   linkedin: guideng
+#  twitter: daattali
+#  facebook: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  xing: yourname
@@ -92,9 +92,9 @@ share-links-active:
   twitter: false
   facebook: false
   google: false
-  linkedin: true
   email: true
   github: true
+  linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
