--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ description: Analytics + NV
 
 # List of links in the navigation bar
 navbar-links:
-  ABOUT: "aboutme"
   PROJECTS: "projects"
-  RESUME: "resume/mariaguidengresume.pdf"
+  ABOUT: "aboutme"
+  RESUME: "resume"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
