--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,11 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/nincat.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
+title-img: /img/welcomelv.jpg
 # title-img: /path/to/image
 
 # --- Background colour/image options --- #
@@ -55,6 +56,10 @@ footer-link-col: "#404040"
 # navbar-img: "/img/bgimage.png"
 # footer-img: "/img/bgimage.png"
 # page-img: "/img/bgimage.png"
+
+navbar-img: "/img/laptopandcoffee.png"
+footer-img: "/img/pastelcanyon.jpg"
+page-img: "/img/strip.jpg"
 
 # --- Footer options --- #
 
