--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  email: "nerdyrie@gmail.com"
-  github: mariaguideg
+  email: "imlearningthethings@gmail.com"
+  github: mguideng
   linkedin: guideng
 #  twitter: daattali
 #  facebook: daattali
