--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,23 @@ avatar: "/img/nincat.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
+navbar-col: "#404040"
+navbar-text-col: "#F5F5F5"
+navbar-children-col: "#375915"
+page-col: "#FFFFFF"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+footer-col: "#404040"
+footer-text-col: "#777777"
+footer-link-col: "#777777"
+
+# "#F5F5F5" light gray
+# "#404040" almost black
+# "#FFFFFF" almost white
+# "#008AFF" sea blue
+# "#0085A1" darksea blue
+# "#777777" dark gray
+
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
@@ -50,12 +67,6 @@ footer-col: "#F5F5F5"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
-# "#F5F5F5" light gray
-# "#404040" almost black
-# "#FFFFFF" almost white
-# "#008AFF" sea blue
-# "#0085A1" darksea blue
-# "#777777" dark gray
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
