--- a/_config.yml
+++ b/_config.yml
@@ -41,14 +41,14 @@ avatar: "/img/nincat.jpg"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#404040"
-navbar-text-col: "#F5F5F5"
-navbar-children-col: "#375915"
+navbar-text-col: "#FFFFFF"
+navbar-children-col: "#404040"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#62c363"
 footer-col: "#404040"
-footer-text-col: "#777777"
-footer-link-col: "#777777"
+footer-text-col: "#62c363"
+footer-link-col: "#62c363"
 
 # "#F5F5F5" light gray
 # "#404040" almost black
