--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ avatar: "/img/nincat.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#404040"
+navbar-col: "#000000"
 navbar-text-col: "#FFFFFF"
-navbar-children-col: "#404040"
+navbar-children-col: "#000000"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#62c363"
-footer-col: "#404040"
+footer-col: "#000000"
 footer-text-col: "#62c363"
 footer-link-col: "#62c363"
 
@@ -56,6 +56,7 @@ footer-link-col: "#62c363"
 # "#008AFF" sea blue
 # "#0085A1" darksea blue
 # "#777777" dark gray
+# "#000000" black
 
 # navbar-col: "#F5F5F5"
 # navbar-text-col: "#404040"
