--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ description: Analytics + NV
 
 # List of links in the navigation bar
 navbar-links:
-  PROJECTS: "https://www.gitshowcase.com/mguideng"
+  GITHUB PROJECTS: "https://www.gitshowcase.com/mguideng"
+  TABLEAU PROJECTS: "https://public.tableau.com/profile/maria.guideng#!/"
 #  DATA: "data"
   ABOUT: "aboutme"
 #  RESUME: "resume"
