--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Home
 
 # Short description of your site
-description: Analytics + NV
+description: Maria Guideng
 
 # --- Navigation bar options --- #
 
